<resources>

    <!-- Title plus start  -->
    <string name="app_name">FirstApp</string>
    <string name="discount_calc">Discount Calculator</string>
    <!-- first line  -->
    <string name="item_price">Item Price:</string>
    <string name="item_price_hint">Enter List Price</string>


    <!-- Sale Options +label -->
    <string name="sale_percent">Sale %:</string>

    <string name="rad10">10%</string>
    <string name="rad15">15%</string>
    <string name="rad18">18%</string>
    <string name="radCustom">Custom</string>

    <!-- Line 3 custom % -->

    <string name="custom_percent">Custom %:</string>

    <string name="discount_calculation">Discount:</string>
    <string name="final_calculation">Final Price:</string>
    <!-- Button Labels -->
    <string name="buttonReset">Reset</string>
    <string name="buttonCalculate">Calculate</string>




    <!-- Default TextView Texts -->
    <string name="txtPercentCalc">0%</string>
    <string name="txtDiscountCalc">0.00</string>
    <string name="textFinalCalc">0.00</string>

</resources>
